# UnB

2014.2/Computação Básica/Testes/: teste arquivos.c  teste comparacao.c  teste matriz struct.c  teste.txt
2015.2/Met. Programação/Trabalhos/Trab 2/: CMakeFile.txt  CMakeFile.txt~  CMakeLists.txt  CMakeLists.txt~  LEIAME_Rodrigo_140170740.txt  Makefile~
2015.2/Met. Programação/Trabalhos/Trab 2/Bibliotecas/: Pilha.hpp  Pilha.hpp~
2015.2/Met. Programação/Trabalhos/Trab 2/Constru/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
2015.2/Met. Programação/Trabalhos/Trab 2/Escrito/: Acrescentando_Gcov  Acrescentando_Gcov~  Acrescentar Gcov~  CMakeLists.txt  CMakeLists.txt~  Executando_Cppcheck  Executando_Gcov  Executando_Gcov~  Executando_Gtest  Executando_Gtest~  Instalacao_Cppcheck  Instalacao_Gtest  Instalacao_gtest~  Trabalho 1.aux  Trabalho 1.dvi  Trabalho 1.tex  Trabalho 1.tex.backup  instalacao~
2015.2/Met. Programação/Trabalhos/Trab 2/Fontes/: Pilha.cpp  Pilha.cpp~  Pilha_teste.cpp  Pilha_teste.cpp~
2015.2/Met. Programação/Trabalhos/Trabalho Final_08-12/Codificação_FINAL/CMake/: CMakeLists.txt  CMakeLists.txt~
2016.1/Introdução a Computação Sônica/Trabalho 1/: makefile
2016.1/Introdução a Computação Sônica/Trabalho 2/: ICS-Trabalho 2_Apresentação.odp  makefile
2016.1/Introdução a Computação Sônica/Trabalho 3/: Objetivo.txt  makefile
2016.1/Introdução a Computação Sônica/Trabalho 4/: Objetivo.txt  makefile
2016.2/Sistemas de Informação/Trabalho 1/: makefile  readme.txt
2016.2/Sistemas de Informação/Trabalho 3/: makefile  readme.txt
2017.1/Organização e Arquitetura de Computadores/Trabalhos/: .dropbox
2017.2/Linguagens de Programação/Trab 2/: F6LAE.hs  F6LAE.pl  F6LAE_Tst.hs
2017.2/Linguagens de Programação/Trab 2_Ver 2/: F6LAE.hs  F6LAE.pl  Tst_F6LAE.hs
2017.2/Técnicas de Programação 1/Trabalho Disciplina/: CppCheckResults.xml  LEIAME.TXT  Principal.cpp  Principal.hpp  Trabalho_Disciplina.cbp  Trabalho_Disciplina.depend  Trabalho_Disciplina.layout  cachegrind.out.19835
2017.2/Técnicas de Programação 1/Trabalho_1/: LEIAME.TXT  Principal.cpp  Principal.hpp  Trabalho_1.cbp  (+2 more)
2018.1/Projeto e Análise de Algoritmo/: MétodoMestre  NotaçãoAssintótica
2018.2/Teleinformática e Redes 2/: a.out
(+3450 files in other folders)
