cmake_minimum_required(VERSION 2.6)
project(TrabF_MP)
enable_testing()
find_package (Threads)
message(STATUS GTEST_ROOT=$ENV{GTEST_ROOT})
include_directories($ENV{GTEST_ROOT}/include)
link_directories($ENV{GTEST_ROOT}/samples)

SET(GCC_COVERAGE_COMPILE_FLAGS "-fprofile-arcs -ftest-coverage")
SET(GCC_COVERAGE_LINK_FLAGS    "-lgcov")
SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )
SET(CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${GCC_COVERAGE_LINK_FLAGS}" )
SET(CMAKE_CXX_OUTPUT_EXTENSION_REPLACE 1)

add_executable(TrabF_MP_Rodrigo Fontes/Pilha.cpp Fontes/Pilha_teste.cpp)
target_link_libraries(TrabF_MP_Rodrigo gtest gtest_main)
target_link_libraries(TrabF_MP_Rodrigo ${CMAKE_THREAD_LIBS_INIT})
add_test(NAME TrabF_MP_Rodrigo COMMAND TrabF_MP_Rodrigo)
